--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sweetalert2/themes": "^5.0.18",
+    "flowbite": "^2.5.2",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "@types/node": "^20",
