--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sweetalert2/themes": "^5.0.18",
     "flowbite": "^2.5.2",
+    "js-cookie": "^3.0.5",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +19,7 @@
     "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
